# OMIFI-AI-Voice-Assistant1

./: .replit  README.md  app.py  main.py  pyproject.toml  release_instructions.txt  replit.nix  test_paths.py
.omifi/: metadata.json
.omifi/clipboard/: test_clipboard_json_2025-03-30T13-45-29.374793.json
attached_assets/: Pasted-Create-a-desktop-AI-voice-assistant-named-OMIFI-that-operates-in-the-background-and-activates-when-i-1743331247702.txt
omifi/: __init__.py  clipboard.py  command_processor.py  screenshot.py  storage.py  text_to_speech.py  voice_recognition.py
omifi-data/: test_file.txt
omifi-data/clipboard/: test_clipboard_text_2025-03-30T13-45-29.374793.txt
omifi/ui/: __init__.py  dashboard.py  resources.py  system_tray.py
static/css/: style.css  styles.css
static/js/: main.js  webrtc-hardware.js
templates/: dashboard.html  index.html
